Fixed header vertical alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -278,12 +278,16 @@ footer {
 
     header {
         justify-content: flex-start;
-        
+        padding-top: 2.5em;
         // padding-top: 1em;
         // padding-bottom: 1.5em;
         // display: flex;
         // justify-content: space-between;
         // align-items: baseline;
+    }
+
+    header img, nav {
+        margin: auto 0;
     }
 
     .mobile-nav {
@@ -292,7 +296,7 @@ footer {
         min-height: auto;
         display: flex;
         width: 100%;
-        
+        padding-top: 0;
         // display: block;
         // position: fixed;
         // top: 0;
